frontend/src/Components/ContentComponent.module.scss
.content {
  max-height: fit-content;

  iframe, video {
      max-width: 100%;
      aspect-ratio: 16 / 9;
      height: auto;
  }

  &.cut {
    max-height: 650px;
    overflow: hidden;
    -webkit-mask-image: -webkit-gradient(linear, left 70%, left 90%, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 90%);
  }
  b, i, u, strike, blockquote{
    color: var(--fg);
  }

  img {
    max-width: 100%;
    max-height: 500px;
  }

  :global(a.youtube-embed) {
    position: relative;
    display: inline-block;

    &:after {
      display: block;

      content: '';
      background-size: 100% 100%;
      background: url(../Assets/youtube.svg) no-repeat center center;

      height: 100%;
      width: 100%;
      position: absolute;
      top: 0;
      left: 0;
      opacity: 0.8;
      pointer-events: none;
    }
    &:hover:after {
      opacity: 1;
    }
  }
}

.cutCover {
  position: relative;
}

.cutButton {
  position: absolute;
  bottom: 8px;
  left: 0;
  background: var(--dim2);
  color: var(--fgMedium);
  border: none;
  //border: 1px solid var(--dim3);
  padding: 8px;
  border-radius: 4px;
  font-size: 15px;
  &:hover{
    background: var(--dim3);
  }
}

